<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayoutPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/toggleButtonClients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="toggleButtonConnectToClientsFunction"
                android:textOff="@string/connectToClients"
                android:textOn="@string/disconnectToClients" />

            <ToggleButton
                android:id="@+id/toggleButtonCamera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="toggleButtonConnectCamerasFunction"
                android:textOff="@string/connectToCameras"
                android:textOn="@string/disconnectToCameras" />
        </LinearLayout>

        <ListView
            android:id="@+id/ListView"
            android:layout_width="match_parent"
            android:layout_height="80dp"/>

        <VideoView
            android:id="@+id/videoView"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_weight="1" />
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            app:srcCompat="@drawable/logo" />

        <LinearLayout
            android:id="@+id/linearLayoutSecondaryVideoViews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

        <Button
            android:id="@+id/buttonAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:onClick="about"
            android:text="@string/about" />
    </LinearLayout>
</ScrollView>